--- a/layout/page.ejs
+++ b/layout/page.ejs
@@ -89,7 +89,8 @@
     })();
 </script>
 
-<script type="text/javascript">
+<!--畅言评论插件-->
+<!--<script type="text/javascript">
     (function () {
         var appid = 'cytdwbqB7';
         var conf = 'prod_2648b5665a85c057dd13bef6cd1ebd30';
@@ -123,7 +124,7 @@
             });
         }
     })();
-</script>
+</script>-->
 
 <script>
     var _hmt = _hmt || [];
