--- a/source/css/_partial/markdown.styl
+++ b/source/css/_partial/markdown.styl
@@ -3,32 +3,37 @@
   overflow-x: hidden
   pre, code
     font-family: 'Roboto Mono', Monaco, courier, monospace
-    font-size: 13px
+    font-size: inherit
     @media m-mobile
-      font-size: 12px
+      font-size: inherit
     .line
       margin: 2px 0
   p
     line-height: 1.6em
+    margin-top: 10px
     code
       background-color: color-background
       color: color-orange
-      padding: 3px 5px
-      margin: 0 2pxz
-      border-radius: 2px
+      margin: 0 2px
+      border-radius: 3px
+      white-space: nowrap
+  h1, h2, h3, h4, h5, h6
+    code
+      color: color-orange
+      margin: 0 2px
       white-space: nowrap
   h1
-    font-size: 1.8em
+    font-size: 1.6em
   h2
-    font-size: 1.5em
+    font-size: 1.4em
   h3
     margin: 1em 0
-    font-size: 1.3em
+    font-size: 1.2em
     padding-bottom: .3em
     border-bottom: 1px solid color-border
   h4
     margin: 1em 0
-    font-size: 1.2em
+    font-size: 1em
     &:before
       content: "#";
       color: color-primary
@@ -36,20 +41,30 @@
       font-size: 1.2em
       font-weight: 700
   h5
-    font-size: 1em
+    font-size: .8em
     margin: .8em 0
   blockquote
     margin: 1em 0
-    padding: 15px 20px
+    padding: 12px 20px
     border-left: 4px solid color-primary
     background: color-background
     border-bottom-right-radius: 2px
     border-top-right-radius: 2px
+    p
+      margin: auto
   ul, ol
     overflow: auto
-    margin: 15px 0
+    margin: 3px 0
     li
-      padding: 5px 0
+      padding: 3px 0
+      p
+        margin: auto
+      code
+        background-color: color-background
+        color: color-orange
+        margin: 0 2px
+        border-radius: 2px
+        white-space: nowrap
   img
     max-width: 100%
     display: block
@@ -76,6 +91,7 @@
       font-weight: 500
   > table
     width: 100%
+    border-collapse: collapse
     thead
       background-color: color-primary
       border-top-width: 1px
@@ -84,14 +100,24 @@
       th
         padding: 5px 10px
         color: color-white
+        border: 1px solid #ccc
+        text-align: center
     tbody
       tr
         &:nth-child(even)
           background: #e6eed6
         &:nth-child(odd)
-          background: color-white
+          background: color white
         td
           padding: 5px 10px
+          border: 1px solid #ccc
+          code
+            color: color-orange
+            padding: 0 2px
+        td:first-child
+          text-align: center
+          code
+            white-space: nowrap
   hr
     border: none
     border-bottom: 1px dashed color-border
