--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -71,6 +71,7 @@ pre
   display: inline-block
   background-color: color-background
   color: color-orange
+  font-weight: 600
   padding: 3px 5px
   margin: 0 2px 5px 0
   border-radius: 2px
@@ -226,9 +227,9 @@ h2.article-head
   margin-top: 10px
   text-align: center
   color: color-gray
-z
-//font-style: italic
 
+z
+  //font-style: italic
 .qrcode
   padding-bottom: 30px
   text-align: center
@@ -264,7 +265,7 @@ z
   position: fixed
   box-sizing: border-box
   right: 2em
-  bottom: 45px
+  bottom: 50px
   width: 40px
   height: 40px
   padding: 5px
