--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,7 +1,7 @@
 .app-footer
   padding: 1em 0
   margin: 0 auto
-  max-width: 850px
+  max-width: 100%
   border-top: 1px solid color-border
   background-color: color-white
   text-align: center
