:boom:修改页面标题、添加emoji表情解析、:star:about页图片引用

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -71,7 +71,6 @@ pre
   display: inline-block
   background-color: color-background
   color: color-orange
-  font-weight: 600
   padding: 3px 5px
   margin: 0 2px 5px 0
   border-radius: 2px
@@ -227,12 +226,13 @@ h2.article-head
   margin-top: 10px
   text-align: center
   color: color-gray
-
 z
-  //font-style: italic
+//font-style: italic
+
 .qrcode
   padding-bottom: 30px
   text-align: center
+  border-bottom: 1px dashed color-border
   img
     width: 8em
     height: 8em
@@ -264,7 +264,7 @@ z
   position: fixed
   box-sizing: border-box
   right: 2em
-  bottom: 50px
+  bottom: 45px
   width: 40px
   height: 40px
   padding: 5px
