--- a/source/css/_partial/tags.styl
+++ b/source/css/_partial/tags.styl
@@ -1,6 +1,6 @@
 #tag-cloud
   margin: 30px 0
-  text-align: left
+  text-align: center
   a
     border: none
     line-height: 28px
@@ -36,7 +36,7 @@
     top: -2px
     font-size: 1.2em
     font-weight: 700
-
+    
 .tag-preview
   font-size: 1.1em
   padding-left: 1em
