--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" type="image/ico" href="<%= config.favicon || theme.favicon %>" />
   <% } else { %> <%- favicon_tag('css/images/logo.png') %> <% } %>
   <title>
-    <% if (page.title){ %> <%= page.title %> | <% %> <%= config.title %> <% } else { %> <%= config.title %> <% } %>
+    <% if (page.title){ %> <%= page.title %> | <%= config.title %> <% } else { %> <%= config.title %> <% } %>
   </title>
   <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   <link href="//cdn.bootcss.com/nprogress/0.2.0/nprogress.min.css" rel="stylesheet" />
