修改评论模块valine样式

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -55,6 +55,10 @@ pre
   transform: translateY(-20px)
   transition: all 0.4s
 
+.valine
+  width: 760px
+  margin: 0 auto
+
 .hljs
   background: none !important
 
@@ -301,4 +305,3 @@ z
 @import "_partial/archive"
 @import "_partial/about"
 @import "_partial/project"
-@import "_partial/comment"
